--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,3 +1,4 @@
-<img src="../assets/imaxe/Logo.jpg" height="400px" width="600px" />
+<img src="../assets/imaxe/Logo.png" height="200px" width="300px" routerLink="/benvida"/>
 
 <router-outlet></router-outlet>
+<p>Paxina creada por FranRM@github.</p>
