Arbore de visualizacion da app funcional.

--- a/src/app/benvida/benvida.component.html
+++ b/src/app/benvida/benvida.component.html
@@ -1,1 +1,4 @@
 <h1>{{benvida}}</h1>
+<button routerLink="/clientela">Area de clientes</button>
+<button routerLink="/funcionariado">Area de administración</button>
+<button routerLink="/proletariado">Area de traballadores</button>
