--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,3 +1,6 @@
 <img src="../assets/imaxe/Logo.png" height="200px" width="300px" routerLink="/benvida"/>
-<router-outlet></router-outlet>
-<p>Paxina creada por FranRM@github.</p>
+<router-outlet>
+</router-outlet>
+<footer>
+    <p>Paxina creada por FranRM@github.</p>
+</footer>
