Reaconndicionamento do obxeto de benvida

--- a/src/app/benvida/benvida.component.html
+++ b/src/app/benvida/benvida.component.html
@@ -1,4 +1,6 @@
+<ul>
+    <li><a routerLink="/clientela">Clientes</a></li>
+    <li><a routerLink="/funcionariado">Administración</a></li>
+    <li><a routerLink="/proletariado">Traballadores</a></li>
+</ul>
 <h1>{{benvida}}</h1>
-<button routerLink="/clientela">Area de clientes</button>
-<button routerLink="/funcionariado">Area de administración</button>
-<button routerLink="/proletariado">Area de traballadores</button>
