--- a/src/app/benvida/benvida.component.sass
+++ b/src/app/benvida/benvida.component.sass
@@ -1,3 +1,19 @@
 h1
     background-color: rgba(27, 238, 20, 0.479)
     width: 25%
+ul
+    list-style-type: none
+    margin: 0
+    padding: 0
+    overflow: hidden
+    background-color: rgb(6, 75, 6)
+li
+    float: left
+li a
+    display: block
+    color: white
+    text-align: center
+    padding: 14px 16px
+    text-decoration: none
+li a:hover
+    background-color: rgb(5, 54, 5)
