Login de administradores funcional.

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,6 +1,4 @@
 <img src="../assets/imaxe/Logo.png" height="200px" width="300px" routerLink="/benvida"/>
 <router-outlet>
 </router-outlet>
-<footer>
-    <p>Paxina creada por FranRM@github.</p>
-</footer>
+<footer>Paxina creada por FranRM@github.</footer>
