--- a/src/app/benvida/benvida.component.sass
+++ b/src/app/benvida/benvida.component.sass
@@ -1,6 +1,8 @@
 h1
     background-color: rgba(27, 238, 20, 0.479)
-    width: 25%
+    font-size: 2em
+    text-align: center
+    font-weight: bold
 ul
     list-style-type: none
     margin: 0
@@ -17,3 +19,11 @@ li a
     text-decoration: none
 li a:hover
     background-color: rgb(5, 54, 5)
+div img
+    margin-left: auto
+    margin-right: auto
+    display: block
+    height: 20em
+    width: 30em
+div p
+    text-align: center
