--- a/src/app/app.component.sass
+++ b/src/app/app.component.sass
@@ -1,7 +1,14 @@
-footer 
-    position: absolute
-    bottom: 0
-
 body
-    background-color: #456745
-
+    background-color: rgba(69, 103, 69, 0.004)
+    display: block
+    margin-left: auto
+    margin-right: auto
+img
+    width:15%
+    height: auto
+footer 
+    position: relative
+    bottom: 0
+    font-size: 0.7em
+footer:before
+    padding: 1em
