--- a/src/app/benvida/benvida.component.html
+++ b/src/app/benvida/benvida.component.html
@@ -4,3 +4,9 @@
     <li><a routerLink="/proletariado">Traballadores</a></li>
 </ul>
 <h1>{{benvida}}</h1>
+<div>
+    <img src="../assets/imaxe/jardineria-770x500.jpg" />
+    <p>Colocacion e mantemento de plantas de temporada.</p>
+    <img src="../assets/imaxe/249269172_1.jpg" />
+    <p>Expertos en céspede e árbores ornamentais.</p>
+</div>
