--- a/src/app/clientela/clientela.component.html
+++ b/src/app/clientela/clientela.component.html
@@ -1,10 +1,11 @@
 <h1>Zona de Clientes:</h1>
+<a *ngIf="!logeado" routerLink="/rexistro">Rexistrarse</a>
+<h2>Acceso:</h2>
 <form *ngIf="!logueado">
     <input [(ngModel)]="loginUserData.user" name="caixaUsuarioL" type="text" placeholder="Usuario" />
     <br />
     <input [(ngModel)]="loginUserData.pass" name="caixaContrasinalL" type="password" placeholder="Constrasinal" />
     <br />
-    <button (click)="logear()">Entrar</button>
+    <button (click)="logearCliente()">Entrar</button>
 </form>
 <button *ngIf="logeado" (click)="pecharSesion()">Pechar sesión</button>
-<button *ngIf="!logeado" routerLink="/rexistro">Rexistrarse</button>
