--- a/src/app/clientela/clientela.component.sass
+++ b/src/app/clientela/clientela.component.sass
@@ -11,3 +11,11 @@ button
     background-color: rgb(71, 160, 71)
     color: rgb(255, 255, 255)
     border-color: black
+a
+    color: rgb(35, 65, 34)
+    text-decoration: underline
+    float: right
+    margin-right: 10px
+h1
+    color: rgb(76, 170, 73)
+    background-color: rgba(0, 0, 0, 0.63)
