Correccions e bugs detectados.

--- a/src/app/clientela/clientela.component.html
+++ b/src/app/clientela/clientela.component.html
@@ -1,7 +1,7 @@
 <h1>Zona de Clientes:</h1>
 <a *ngIf="!logeado" routerLink="/rexistro">Rexistrarse</a>
 <h2>Acceso:</h2>
-<form *ngIf="!logueado">
+<form *ngIf="!logeado">
     <input [(ngModel)]="loginUserData.user" name="caixaUsuarioL" type="text" placeholder="Usuario" />
     <br />
     <input [(ngModel)]="loginUserData.pass" name="caixaContrasinalL" type="password" placeholder="Constrasinal" />
