--- a/src/app/funcionariado/funcionariado.component.html
+++ b/src/app/funcionariado/funcionariado.component.html
@@ -1,6 +1,6 @@
 <h1>Zona de Administración:</h1>
 <h2>Acceso:</h2>
-<form *ngIf="!logueado">
+<form *ngIf="!logeado">
     <input [(ngModel)]="loginAdminData.user" name="caixauser" type="text" placeholder="Usuario" />
     <br />
     <input [(ngModel)]="loginAdminData.pass" name="caixaPass" type="password" placeholder="Constrasinal" />
