Implementando login único.

--- a/src/app/benvida/benvida.component.sass
+++ b/src/app/benvida/benvida.component.sass
@@ -27,3 +27,8 @@ div img
     width: 30em
 div p
     text-align: center
+b
+    color: rgb(35, 65, 34)
+    text-decoration: underline
+    float: right
+    margin-right: 10px
