--- a/src/app/rexistro/rexistro.component.html
+++ b/src/app/rexistro/rexistro.component.html
@@ -1,12 +1,15 @@
 <p>Complete os campos requeridos para proceder ó rexistro.</p>
 <form *ngIf="!datosIntroducidos">
-    <input [(ngModel)]="regUserData.nome" name="caixaNome" type="text" placeholder="Nome" />
-    <br />
-    <input [(ngModel)]="regUserData.apelidos" name="caixaApelidos" type="text" placeholder="Apelidos" />
-    <br />
-    <input [(ngModel)]="regUserData.user" name="caixaUsuario" type="text" placeholder="Usuario" />
-    <br />
-    <input [(ngModel)]="regUserData.pass" name="caixaContrasinal" type="text" placeholder="Constrasinal" />
-    <br />
+    <section>
+        <input [(ngModel)]="regUserData.nome" name="caixaNome" type="text" placeholder="Nome" />
+        <input [(ngModel)]="regUserData.apelidos" name="caixaApelidos" type="text" placeholder="Apelidos" />
+        <input [(ngModel)]="regUserData.user" name="caixaUsuario" type="text" placeholder="Usuario" />
+        <input [(ngModel)]="regUserData.pass" name="caixaContrasinal" type="text" placeholder="Constrasinal" />
+    </section>
+    <section>
+        
+    </section>
+    
+    
     <button (click)="rexistrar()">Rexistrarse</button>
 </form>
