--- a/src/app/benvida/benvida.component.html
+++ b/src/app/benvida/benvida.component.html
@@ -1,8 +1,15 @@
 <ul>
+    <li><a routerLink="/clientela">Clientes</a></li>
+    <li><a routerLink="/funcionariado">Administración</a></li>
+    <li><a routerLink="/proletariado">Traballadores</a></li>
+</ul>
+<!--
+    <ul>
     <li><a routerLink="/login">Clientes</a></li>
     <li><a routerLink="/login">Administración</a></li>
     <li><a routerLink="/login">Traballadores</a></li>
 </ul>
+-->
 <b *ngIf="!logeado" routerLink="/rexistro">Rexistrarse</b>
 <h1>{{benvida}}</h1>
 <div>
