--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,5 @@
 <img src="../assets/imaxe/Logo.png" height="200px" width="300px" routerLink="/benvida"/>
+<a *ngIf="isLogeado()" (click)="logout()">{{logeado}}, logout?</a>
 <router-outlet>
 </router-outlet>
 <footer>Paxina creada por FranRM@github.</footer>
