--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -1,8 +1,8 @@
 <h2>Acceso:</h2>
 <form *ngIf="!logeado">
-    <input [(ngModel)]="loginData.user" name="caixaUsuarioL" type="text" placeholder="Usuario" />
+    <input [(ngModel)]="usuario.user" name="caixaUsuarioL" type="text" placeholder="Usuario" />
     <br />
-    <input [(ngModel)]="loginData.pass" name="caixaContrasinalL" type="password" placeholder="Constrasinal" />
+    <input [(ngModel)]="usuario.pass" name="caixaContrasinalL" type="password" placeholder="Constrasinal" />
     <br />
     <button (click)="logear()">Entrar</button>
 </form>
