--- a/src/app/proletariado/proletariado.component.html
+++ b/src/app/proletariado/proletariado.component.html
@@ -2,9 +2,9 @@
 <h1>Zona de Traballadores:</h1>
 <h2>Acceso:</h2>
 <form *ngIf="!logeado">
-    <input [(ngModel)]="loginTrabData.user" name="caixaUsuarioT" type="text" placeholder="Usuario" />
+    <input [(ngModel)]="this.user" name="caixaUsuarioT" type="text" placeholder="Usuario" />
     <br />
-    <input [(ngModel)]="loginTrabData.pass" name="caixaContrasinalT" type="password" placeholder="Constrasinal" />
+    <input [(ngModel)]="this.pass" name="caixaContrasinalT" type="password" placeholder="Constrasinal" />
     <br />
     <button (click)="logearTraballador()">Entrar</button>
 </form>
