--- a/src/app/app.component.sass
+++ b/src/app/app.component.sass
@@ -12,3 +12,9 @@ footer
     font-size: 0.7em
 footer:before
     padding: 1em
+button
+    float: right
+    border-radius: 6px
+    background-color: rgb(71, 160, 71)
+    color: rgb(255, 255, 255)
+    border-color: black
