Logins centralizados e reparados.

--- a/src/app/benvida/benvida.component.html
+++ b/src/app/benvida/benvida.component.html
@@ -1,5 +1,5 @@
 <ul>
-    <li><a routerLink="/clientela">Clientes</a></li>
+    <li><a routerLink="/login">Clientes</a></li>
     <li><a routerLink="/funcionariado">Administración</a></li>
     <li><a routerLink="/proletariado">Traballadores</a></li>
 </ul>
