--- a/src/app/rexistro/rexistro.component.sass
+++ b/src/app/rexistro/rexistro.component.sass
@@ -4,6 +4,7 @@ input
     border:0px
     text-align: center
     color: rgb(255, 255, 255)
+    display: block
 ::placeholder
     color: rgba(255,255,255,0.75)
 button
