Reparación acceso a Xardins

--- a/src/app/clientela/clientela.component.html
+++ b/src/app/clientela/clientela.component.html
@@ -1,1 +1,10 @@
 <h1>Zona de Clientes:</h1>
+<a>{{usuarioLocal.mail}},{{usuarioLocal.name}},{{usuarioLocal.rol}},{{usuarioLocal.surname}},{{usuarioLocal.username}}</a>
+<div>
+    <h3>Os meus xardins</h3>
+    <ul><li *ngFor="let x of usuarioLocal.xardins"><a >{{x.direccion}}</a></li></ul>
+    
+</div>
+<button (click)="adicionXardin()">Engadir xardín</button>
+
+<button (click)="gardarDatos()">Gardar</button>
