Edicion de xardins e edicion de mapas.

--- a/src/app/clientela/clientela.component.html
+++ b/src/app/clientela/clientela.component.html
@@ -1,13 +1,17 @@
 <h1>Zona de Clientes:</h1>
-
+<h3>Os meus xardins</h3>
 <div>
-    <h3>Os meus xardins</h3>
-    <ul><li *ngFor="let x of usuarioLocal.xardins">
-        <input [(ngModel)]="x.direccion" name="caixaDireccion" type="text" placeholder="Direccion" />
-        <input [(ngModel)]="x.accions" name="caixaAccions" type="text" placeholder="Accions" />
-</li></ul>
-    
+    <ul>
+        <li *ngFor="let xardin of usuarioLocal.xardins">
+            <a>{{xardin.direccion}}</a>
+            <a>{{xardin.accions}}</a>
+            <input [(ngModel)]="xardin.direccion" name="caixaDireccion" type="text" placeholder="Direccion" />
+            <input [(ngModel)]="xardin.accions" name="caixaAccions" type="text" placeholder="Accions" />
+            <button><img src="../../assets/imaxe/tools.png"></button>
+        </li>
+    </ul>
 </div>
+<div id="mapa"></div>
+<button (click)="imprimirCoordenadas()">Imprimir coordenadas</button>
 <button (click)="adicionXardin()">Engadir xardín</button>
-
 <button (click)="gardarDatos()">Gardar</button>
