--- a/src/app/benvida/benvida.component.html
+++ b/src/app/benvida/benvida.component.html
@@ -13,8 +13,8 @@
 <b *ngIf="!appComp.isLogeado()" routerLink="/rexistro">Rexistrarse</b>
 <h1>{{benvida}}</h1>
 <div>
-    <img src="../assets/imaxe/jardineria-770x500.jpg" />
+    <img class="big-image" src="../assets/imaxe/jardineria-770x500.jpg" />
     <p>Colocacion e mantemento de plantas de temporada.</p>
-    <img src="../assets/imaxe/249269172_1.jpg" />
+    <img class="big-image" src="../assets/imaxe/249269172_1.jpg" />
     <p>Expertos en céspede e árbores ornamentais.</p>
 </div>
