--- a/src/app/benvida/benvida.component.sass
+++ b/src/app/benvida/benvida.component.sass
@@ -23,8 +23,6 @@ div img
     margin-left: auto
     margin-right: auto
     display: block
-    height: 20em
-    width: 30em
 div p
     text-align: center
 b
@@ -32,3 +30,7 @@ b
     text-decoration: underline
     float: right
     margin-right: 10px
+
+.big-image
+    border-radius: 2%
+    width: 50%%
