--- a/src/app/clientela/clientela.component.html
+++ b/src/app/clientela/clientela.component.html
@@ -1,16 +1,21 @@
 <h1>Zona de Clientes:</h1>
 <h3>Os meus xardins</h3>
-<div>
+<div *ngIf="this.edicion === false">
     <ul>
         <li *ngFor="let xardin of usuarioLocal.xardins">
+            <a>{{xardin.nome}}</a>
             <a>{{xardin.direccion}}</a>
             <a>{{xardin.accions}}</a>
-            <input [(ngModel)]="xardin.direccion" name="caixaDireccion" type="text" placeholder="Direccion" />
-            <input [(ngModel)]="xardin.accions" name="caixaAccions" type="text" placeholder="Accions" />
-            <button><img src="../../assets/imaxe/tools.png"></button>
+            <button (click)="this.editarXardin(this.xardin)"><img src="../../assets/imaxe/tools.png"></button>
             <app-mapa [xardinLocal]="xardin"></app-mapa>
         </li>
     </ul>
+    <button (click)="adicionXardin()">Engadir xardín</button>
+    <button (click)="gardarDatos()">Gardar</button>
 </div>
-<button (click)="adicionXardin()">Engadir xardín</button>
-<button (click)="gardarDatos()">Gardar</button>
+<div *ngIf="this.edicion === true">
+    <input [(ngModel)]="this.xardinAEditar.nome" name="caixaNome" type="text" placeholder="nome" />
+    <input [(ngModel)]="this.xardinAEditar.direccion" name="caixaDireccion" type="text" placeholder="Direccion" />
+    <input [(ngModel)]="this.xardinAEditar.accions" name="caixaAccions" type="text" placeholder="Accions" />
+    <button (click)="actualizarDatos()">Actualizar datos</button>
+</div>
