--- a/src/app/mapa/mapa.component.html
+++ b/src/app/mapa/mapa.component.html
@@ -1,1 +1,3 @@
 <div class="map" id="{{xardinLocal.direccion}}"></div>
+<button *ngIf="!this.modificarCoordenadas" (click)="this.actualizarCoordenadas()">Actualizar coordenadas</button>
+<button *ngIf="this.modificarCoordenadas" (click)="this.confirmarCoordenadas()">Confirmar coordenadas</button>
