--- a/src/app/app.component.sass
+++ b/src/app/app.component.sass
@@ -7,9 +7,12 @@ img
     width:15%
     height: auto
 footer 
-    position: relative
-    bottom: 0
-    font-size: 0.7em
+    div
+        text-align: center
+        position: fixed
+        bottom: 5px
+        width: 100%
+        font-size: 0.7em
 footer:before
     padding: 1em
 button
