Correxigo erro ao redimensionar login

--- a/src/app/login/login.component.sass
+++ b/src/app/login/login.component.sass
@@ -5,6 +5,7 @@
 .login-container
     margin-top: 10%
     width: 20%
+    min-width: 210px
     background-color: rgba(0, 0, 0, 0.2)
     margin-right: auto
     margin-left: auto
