--- a/src/app/app.component.sass
+++ b/src/app/app.component.sass
@@ -21,3 +21,10 @@ button
     background-color: rgb(71, 160, 71)
     color: rgb(255, 255, 255)
     border-color: black
+.example-fill-remaining-space 
+  flex: 1 1 auto
+.toolbar
+    opacity: 0.8
+    position: sticky
+    top: 0px
+    z-index: 10
