--- a/src/app/benvida/benvida.component.html
+++ b/src/app/benvida/benvida.component.html
@@ -1,9 +1,32 @@
-
-<b *ngIf="!appComp.isLogeado()" routerLink="/rexistro">Rexistrarse</b>
-<h1>{{benvida}}</h1>
-<div>
-    <img class="big-image" src="../assets/imaxe/jardineria-770x500.jpg" />
-    <p>Colocacion e mantemento de plantas de temporada.</p>
-    <img class="big-image" src="../assets/imaxe/249269172_1.jpg" />
-    <p>Expertos en céspede e árbores ornamentais.</p>
+<ngb-carousel>
+    <ng-template ngbSlide>
+        <div class="picsum-img-wrapper">
+            <img src="../../assets/imaxe/xardin e poda.jpg" alt="Random first slide">
+        </div>
+    </ng-template>
+    <ng-template ngbSlide>
+        <div class="picsum-img-wrapper">
+            <img src="../../assets/imaxe/xardín de temporada.jpg" alt="Random first slide">
+        </div>
+    </ng-template>
+</ngb-carousel>
+<div class="contenedor">
+    <div class="card left">
+        <img src="../../assets/imaxe/desbroces.jpg" width="100%" height="100%"class="card-img-left" alt="...">
+        <div class="card-body">
+            <p class="card-text">Realizanse todo tipo de desbroces, tanto de xardíns como de fincas.</p>
+        </div>
+    </div>
+    <div class="card center">
+        <img src="../../assets/imaxe/grua de poda.jpg" width="100%" height="100%" class="card-img-right" alt="...">
+        <div class="card-body">
+            <p class="card-text">Disponse de todo tipo de maquinaria para traballos en altura.</p>
+        </div>
+    </div>
+    <div class="card right">
+        <img src="../../assets/imaxe/grua de poda.jpg" width="100%" height="100%" class="card-img-right" alt="...">
+        <div class="card-body">
+            <p class="card-text">Disponse de todo tipo de maquinaria para traballos en altura.</p>
+        </div>
+    </div>
 </div>
