--- a/src/app/clientela/clientela.component.sass
+++ b/src/app/clientela/clientela.component.sass
@@ -1,16 +1,9 @@
 input
-    background-color: rgba(71, 160, 71, 0.725)
     border-radius: 6px
     border:0px
-    text-align: center
-    color: rgb(255, 255, 255)
-::placeholder
-    color: rgba(255,255,255,0.75)
 button
     border-radius: 6px
-    background-color: rgb(51, 145, 51)
-    color: rgb(0, 0, 0)
-    border-color: black
+    background-color: green
 a
     color: rgb(35, 65, 34)
     text-decoration: underline
@@ -18,3 +11,17 @@ a
 h1
     color: rgb(76, 170, 73)
     background-color: rgba(0, 0, 0, 0.63)
+.card
+    margin-top: 20px
+    margin-bottom: 20px
+    margin-left: 20px
+    margin-right: 20px
+    width: 400px
+    display: inline-block
+.xardin-button
+    background-color: green
+.cartaParte
+    width: 250px
+    mat-form-field
+        margin-left: auto
+        margin-right: auto
