--- a/src/styles.sass
+++ b/src/styles.sass
@@ -1,5 +1,6 @@
 /* You can add global styles to this file, and also import other style files */
-@import '@angular/material/prebuilt-themes/deeppurple-amber.css'
+/*@import '@angular/material/prebuilt-themes/deeppurple-amber.css'*/
+@import './custom-theme.scss'
 
 body
-    background-color: #89c46d
+    background-color: #ffffff
