--- a/src/app/clientela/clientela.component.sass
+++ b/src/app/clientela/clientela.component.sass
@@ -20,6 +20,7 @@ h1
     display: inline-block
 .xardin-button
     background-color: green
+    color: rgb(255, 255, 255)
 .cartaParte
     width: 250px
     mat-form-field
