--- a/src/app/mapa/mapa.component.sass
+++ b/src/app/mapa/mapa.component.sass
@@ -3,6 +3,8 @@
     width: 300px
     margin-right: auto
     margin-left: auto
+    margin-bottom: 20px
+    margin-top: 20px
 button
     background-color: green
     
