Implementado o usuario de test, xunto con varios cambios estéticos. Co-authored-by: Jose Ramón Vieites <fabelaretorcida@gmail.com>

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -16,7 +16,7 @@
     Rexistrarse
 </mat-option>
   <mat-option *ngIf="isLogeado()" (click)="logout()">
-      {{nome}}, logout?
+      {{nome}} <img src="../assets/imaxe/exit.png"/>
   </mat-option>
 </mat-toolbar>
 <router-outlet>
