--- a/src/app/benvida/benvida.component.html
+++ b/src/app/benvida/benvida.component.html
@@ -10,7 +10,8 @@
     </ng-template>
     <ng-template ngbSlide>
         <div class="picsum-img-wrapper">
-            <img src="../../assets/imaxe/xardín de temporada.jpg" alt="Random first slide">
+            <img src="../../assets/imaxe/xardín de temporada.jpg" 
+            alt="Random first slide">
         </div>
         <div class="carousel-caption">
             <h1>Multixard</h1>
@@ -20,21 +21,25 @@
 </ngb-carousel>
 <div class="contenedor">
     <div class="card left">
-        <img src="../../assets/imaxe/rega.jpg" width="100%" height="100%"class="card-img-left" alt="...">
+        <img src="../../assets/imaxe/rega.jpg" width="100%" height="100%" 
+        class="card-img-left" alt="...">
         <div class="card-body">
             <p class="card-text">Realízase mantemento tanto de xardíns como de fincas.</p>
         </div>
     </div>
     <div class="card center">
-        <img src="../../assets/imaxe/poda.jpg" width="100%" height="100%" class="card-img-right" alt="...">
+        <img src="../../assets/imaxe/poda.jpg" width="100%" height="100%" 
+        class="card-img-right" alt="...">
         <div class="card-body">
             <p class="card-text">Dispoñibilidade para podas.</p>
         </div>
     </div>
     <div class="card right">
-        <img src="../../assets/imaxe/grua de poda.jpg" width="100%" height="100%" class="card-img-right" alt="...">
+        <img src="../../assets/imaxe/grua de poda.jpg" width="100%" height="100%" 
+        class="card-img-right" alt="...">
         <div class="card-body">
-            <p class="card-text">Disponse de todo tipo de maquinaria para traballos en altura.</p>
+            <p class="card-text">
+                Disponse de todo tipo de maquinaria para traballos en altura.</p>
         </div>
     </div>
 </div>
