--- a/src/app/benvida/benvida.component.sass
+++ b/src/app/benvida/benvida.component.sass
@@ -48,6 +48,7 @@ b
     .card
         width: 300px
         margin-bottom: 4em
+        border-radius: 15%
     .left
         float: left
         margin-left: 10em
