--- a/src/app/rexistro/rexistro.component.html
+++ b/src/app/rexistro/rexistro.component.html
@@ -7,23 +7,28 @@
                 <mat-card-content>
                     <mat-form-field appearance="outline">
                         <mat-label>Usuario</mat-label>
-                        <input matInput [(ngModel)]="usuario.username" name="caixaUsuario" type="text" placeholder="Usuario" />
+                        <input matInput [(ngModel)]="usuario.username" 
+                        name="caixaUsuario" type="text" placeholder="Usuario" />
                     </mat-form-field>
                     <mat-form-field appearance="outline">
                         <mat-label>Contrasinal</mat-label>
-                        <input matInput [(ngModel)]="usuario.pass" name="caixaContrasinal" type="text" placeholder="Constrasinal" />
+                        <input matInput [(ngModel)]="usuario.pass" 
+                        name="caixaContrasinal" type="text" placeholder="Constrasinal" />
                     </mat-form-field>
                     <mat-form-field appearance="outline">
                         <mat-label>Email</mat-label>
-                        <input matInput [(ngModel)]="usuario.mail" name="caixaMail" type="text" placeholder="Email" />
+                        <input matInput [(ngModel)]="usuario.mail" 
+                        name="caixaMail" type="text" placeholder="Email" />
                     </mat-form-field>
                     <mat-form-field appearance="outline">
                         <mat-label>Nome</mat-label>
-                    <input matInput [(ngModel)]="usuario.name" name="caixaNome" type="text" placeholder="Nome" />
+                    <input matInput [(ngModel)]="usuario.name" name="caixaNome" 
+                    type="text" placeholder="Nome" />
                     </mat-form-field>
                     <mat-form-field appearance="outline">
                         <mat-label>Apelidos</mat-label>
-                    <input matInput [(ngModel)]="usuario.surname" name="caixaApelidos" type="text" placeholder="Apelidos" />
+                    <input matInput [(ngModel)]="usuario.surname" 
+                    name="caixaApelidos" type="text" placeholder="Apelidos" />
                     </mat-form-field>
                     <mat-form-field>
                         <mat-label>Rol</mat-label>
@@ -33,7 +38,9 @@
                         <mat-option value="trab">Traballador</mat-option>
                     </mat-select>
                     </mat-form-field>
-                    <button color="primary" mat-raised-button (click)="rexistrar()">Rexistrarse</button>
+                    <button color="primary" mat-raised-button (click)="rexistrar()">
+                        Rexistrarse
+                    </button>
                 </mat-card-content>
             </mat-card>
         </div>
